--- a/src/app/Components/inicio/inicio.component.html
+++ b/src/app/Components/inicio/inicio.component.html
@@ -1,54 +1,55 @@
 <app-nav></app-nav>
-<div class="container-fluid inicio-container">
-    
-    <div class="row fila-1">
-        <div class="col-md-6 bg-success p-5">
-            <div class="div-estrategia">
-                <div class="img-container">
+<!-- Inicio container fluído -->
+    <div class="container-fluid inicio-container">
+        <!-- Inicio fila 1 -->
+        <div class="row fila-1">
+            <!-- Inicio columna 1 de la fila 1 -->
+            <div class="col-sm-12 col-md-6 bg-success">
+                <div class="img-container-estrategias">
                     <img class="img-inicio" src="../../assets/img/principal/3.png" alt="">
                     <a class="centered">{{"BEGINNING.TITLE-7" | translate}}</a>
                 </div>
-                <div class="estrategia-block-1"><a href="/produccion"class="servicios-box">{{"BEGINNING.TITLE-8" | translate}}</a></div>
-                <a href="/marketing"class="servicios-box">{{"BEGINNING.TITLE-9" | translate}}</a>
+                <!-- Inicio satélites de estrategias -->
+                <a href="/produccion"class="servicios-box-estrategia-1">{{"BEGINNING.TITLE-8" | translate}}</a>
+                <a href="/marketing"class="servicios-box-estrategia-2">{{"BEGINNING.TITLE-9" | translate}}</a> 
+                <!-- Final satélites de estrategias -->
             </div>
-        </div>
-
-        <div class="col-md-6 bg-warning p-5">
-            <div class="div-blockchain">
-                <div class="img-container">
+            <!-- Inicio columna 2 de la fila 1 -->
+            <div class="col-sm-12 col-md-6 bg-warning p-5">
+                <div class="img-container-blockchain">
                     <img class="img-inicio" src="../../assets/img/principal/4.png" alt="">
                     <span class="centered">{{"BEGINNING.TITLE-10" | translate}}</span>
                 </div>
-                <a class="servicios-box" href="/dapps">{{"BEGINNING.TITLE-11" | translate}}</a>
+                <!-- Inicio satélite de blockchain -->
+                <a class="servicios-box-blockchain-1" href="/dapps">{{"BEGINNING.TITLE-11" | translate}}</a>    
+                <!-- Fin de satélite de blockchain -->
             </div>
         </div>
-    </div>
-    <div class="row fila-2">
-
-        <div class="col-md-6 bg-primary p-5">
-            <div class="div-digitales">
-                <div class="img-container">
+        <!-- Inicio fila 2 -->
+        <div class="row fila-2">
+            <!-- Inicio columna 1 de fila 2 -->
+            <div class="col-sm-12 col-md-6 bg-primary">
+                <div class="img-container-digitales">
                     <img class="img-inicio" src="../../assets/img/principal/2.png" alt="">
                     <span class="centered">{{"BEGINNING.TITLE-1" | translate}}</span>
                 </div>
-                <a href="/commerce" class="servicios-box">{{"BEGINNING.TITLE-2" | translate}}</a>
-                <a href="/apps"class="servicios-box">{{"BEGINNING.TITLE-4" | translate}}</a>
+                <!-- Inicio satélites de digitales -->
+                <a href="/commerce" class="servicios-box-digitales-1">{{"BEGINNING.TITLE-2" | translate}}</a>              
+                <a href="/apps"class="servicios-box-digitales-2">{{"BEGINNING.TITLE-4" | translate}}</a>
+                <!-- FIn satélites de digitales -->
             </div>
-        </div>
-
-   
-        <div class="col-md-6 bg-secondary">
-            <div class="div-metaverso">
-                <div class="img-container">
+            <!-- Inicio columa 2 de fila 2 -->
+            <div class="col-sm-12 col-md-6 bg-secondary">
+                <div class="img-container-metaverso">
                     <img class="img-inicio" src="../../assets/img/principal/1.png" alt="">
                     <span class="centered">{{"BEGINNING.TITLE-5" | translate}}</span>
                 </div>
-                
-                <a class="servicios-box" href="/arte">{{"BEGINNING.TITLE-6" | translate}}</a>
-                <a class="servicios-box" href="/turismo">{{"BEGINNING.COACHING-1" | translate}}</a>
-                <a href="/coaching"class="servicios-box">{{"BEGINNING.COACHING-2" | translate}}</a>
-                <a href="/services" class="servicios-box">{{"BEGINNING.TITLE-3" | translate}}</a>
+                <!-- Inicio satélites de metaverso -->
+                <a class="servicios-box-metaverso-1" href="/arte">{{"BEGINNING.TITLE-6" | translate}}</a>
+                <a class="servicios-box-metaverso-2" href="/turismo">{{"BEGINNING.COACHING-1" | translate}}</a>
+                <a href="/coaching"class="servicios-box-metaverso-3">{{"BEGINNING.COACHING-2" | translate}}</a>
+                <a href="/services" class="servicios-box-metaverso-4">{{"BEGINNING.TITLE-3" | translate}}</a>
+                <!-- Fin de satélites de metaverso -->
             </div>
         </div>
     </div>
-</div>
