--- a/src/app/Components/comerce/comerce.component.html
+++ b/src/app/Components/comerce/comerce.component.html
@@ -1,16 +1,28 @@
 <app-nav></app-nav>
-<div class="container, align-top">
-    <div class="row justify-content-center">
-        <div class="col-auto posicion">
-            <div class="figura">
-                <p class="pt-6 ml-6 fuente">{{"COMMERCE.TITLE" | translate}}</p>
+    <div class="container" (mouseover)="estado=true" (mouseout)="estado=false">
+        <div *ngIf="!estado" class="row justify-content-center">
+            <div class="col-auto">
+                <div class="figura">
+                    <p class="pt-6 ml-6">{{"COMMERCE.TITLE" | translate}}</p>
+                </div>
+                <img src="../../../assets/img/ecom.png" class="img1" alt="">
             </div>
-            <img src="../../../assets/img/ecom.png" class="img1" alt="">
+            <div class="col col-md-3 ml-2 servicios-box">
+                <img src="../../../assets/img/marcoInter.png" class="img2" alt="">
+                <p class=" pb-6 pt-6 small">{{"COMMERCE.PARAGRAPH" | translate}}</p>
+            </div>
         </div>
-        <div class="col col-md-3 ml-2 color p-7">
-            <img src="../../../assets/img/marcoInter.png" class="img2" alt="">
-            <p class=" pb-6 pt-6 h6">{{"COMMERCE.PARAGRAPH" | translate}}</p>
+<!-- De aquí para abajo aparece la nueva parte, que se activa con el evento-->
+        <div *ngIf="estado" class="row justify-content-center">
+            <div class="col-auto">
+                <div class="figura">
+                    <p class="pt-6 ml-6">{{"COMMERCE.TITLE" | translate}}</p>
+                </div>
+                <img src="../../../assets/img/ecom.png" class="img1_v2" alt="">
+            </div>
+            <div class="offset-1 col-10 servicios-box">
+                <img src="../../../assets/img/marcoInter.png" class="img2" alt="">
+                <p class=" pb-6 pt-6 small">{{"COMMERCE.PARAGRAPH" | translate}}</p>
+            </div>
         </div>
-        </div>
-</div>
-
+    </div>
