--- a/src/app/Components/marketing/marketing.component.html
+++ b/src/app/Components/marketing/marketing.component.html
@@ -1,48 +1,44 @@
 <app-nav></app-nav>
-<div class="container, align-top">
-<div class="container, align-top" (mouseover)="estado=true" (mouseout)="estado=false">
-<div *ngIf="!estado" class="row justify-content-center">
-<div class="col-auto posicion">
-    <div class="figura">
-        <p class="pt-6 fuente">{{"MARKETING.TITLE" | translate}}</p>
-    </div>
-    <img src="../../../assets/img/markExp.svg" class="img1" alt="">
-</div>
-<div class="col col-md-3 ml-2 color p-7">
-    <img src="../../../assets/img/marcoInter.png" class="img2" alt="">
-    <p class="  pt-4 h6">{{"MARKETING.PARAGRAPH" | translate}}</p>
-    <p class=" pb-4 pt-6 h6">{{"MARKETING.PARAGRAPH-1" | translate}}</p>
-    <ul class=" pb-4 h6">
-        <li>{{"MARKETING.LIST" | translate}}</li>
-        <li>{{"MARKETING.LIST-1" | translate}}</li>
-        <li>{{"MARKETING.LIST-2" | translate}}</li>
-        <li>{{"MARKETING.LIST-3" | translate}}</li>
-        <li>{{"MARKETING.LIST-4" | translate}}</li>
-    </ul>
-</div>
-</div>
-<!-- De aquí para abajo aparece la nueva parte, que se activa con el evento-->
-<div *ngIf="estado" class="row justify-content-center">
-    <div style="width:400px; height:200px" class="col-auto posicion">
-        <div class="figura">
-            <p class="pt-6 fuente">{{"MARKETING.TITLE" | translate}}</p>
+    <div class="container" (click)="estado=!estado">
+        <div *ngIf="estado" class="row justify-content-center">
+            <div class="col-auto">
+                <div class="figura">
+                    <p class="pt-6">{{"MARKETING.TITLE" | translate}}</p>
+                </div>
+                <img src="../../../assets/img/markExp.svg" class="img1" alt="">
+            </div>
+            <div class="col col-md-3 ml-2 servicios-box">
+                <img src="../../../assets/img/marcoInter.png" class="img2" alt="">
+                <p class="  pt-4">{{"MARKETING.PARAGRAPH" | translate}}</p>
+                <p class=" pb-4 pt-6">{{"MARKETING.PARAGRAPH-1" | translate}}</p>
+                <ul class=" pb-4">
+                    <li>{{"MARKETING.LIST" | translate}}</li>
+                    <li>{{"MARKETING.LIST-1" | translate}}</li>
+                    <li>{{"MARKETING.LIST-2" | translate}}</li>
+                    <li>{{"MARKETING.LIST-3" | translate}}</li>
+                    <li>{{"MARKETING.LIST-4" | translate}}</li>
+                </ul>
+            </div>
         </div>
-        <img src="../../../assets/img/markExp.svg" class="img1" alt="">
+<!-- De aquí para abajo aparece la nueva parte, que se activa con el evento-->
+        <div *ngIf="!estado" class="row justify-content-center">
+            <div class="col-auto">
+                <div class="figura">
+                    <p class="pt-6">{{"MARKETING.TITLE" | translate}}</p>
+                </div>
+                <img src="../../../assets/img/markExp.svg" class="img1_v2" alt="">
+            </div>
+            <div class="offset-1 col-md-10 servicios-box">
+                <img style="width: 15em; height: 100em" src="../../../assets/img/marcoInter.png" class="img2" alt="">
+                <p class="  pt-4">{{"MARKETING.PARAGRAPH" | translate}}</p>
+                <p class=" pb-4 pt-6">{{"MARKETING.PARAGRAPH-1" | translate}}</p>
+                <ul class=" pb-4">
+                    <li>{{"MARKETING.LIST" | translate}}</li>
+                    <li>{{"MARKETING.LIST-1" | translate}}</li>
+                    <li>{{"MARKETING.LIST-2" | translate}}</li>
+                    <li>{{"MARKETING.LIST-3" | translate}}</li>
+                    <li>{{"MARKETING.LIST-4" | translate}}</li>
+                </ul>
+            </div>
+        </div>
     </div>
-    <div class="offset-1 col-10 col-md-10 color p-7">
-        <img style="width: 15em; height: 100em" src="../../../assets/img/marcoInter.png" class="img2" alt="">
-        <p class="  pt-4 h6">{{"MARKETING.PARAGRAPH" | translate}}</p>
-        <p class=" pb-4 pt-6 h6">{{"MARKETING.PARAGRAPH-1" | translate}}</p>
-        <ul class=" pb-4 h6">
-            <li>{{"MARKETING.LIST" | translate}}</li>
-            <li>{{"MARKETING.LIST-1" | translate}}</li>
-            <li>{{"MARKETING.LIST-2" | translate}}</li>
-            <li>{{"MARKETING.LIST-3" | translate}}</li>
-            <li>{{"MARKETING.LIST-4" | translate}}</li>
-        </ul>
-    </div>
-    </div>
-</div>
-</div>
-
-
