--- a/src/app/Components/services/services.component.html
+++ b/src/app/Components/services/services.component.html
@@ -1,31 +1,31 @@
 <app-nav></app-nav>
-<div class="container, align-top">
-<div class="container, align-top" (mouseover)="estado=true" (mouseout)="estado=false">
-<div *ngIf="!estado" class="row justify-content-center">
-    <div class="col-auto posicion">
-        <div class="figura">
-            <p class="pt-6 ml-1 fuente">{{"SERVICES.TITLE" | translate}}</p>
+    <div class="container" (mouseover)="estado=true" (mouseout)="estado=false">
+        <div *ngIf="!estado" class="row justify-content-center">
+            <div class="col-auto">
+                <div class="figura">
+                    <p class="pt-6 ml-1 small">{{"SERVICES.TITLE" | translate}}</p>
+                </div>
+                <img src="../../../assets/img/mark.jpg" class="img1" alt="">
+            </div>
+            <div class="col col-md-3 ml-2 servicios-box">
+                <img src="../../../assets/img/marcoInter.png" class="img2" alt="">
+                <p class=" pb-6 pt-6 small">{{"SERVICES.PARAGRAPH" | translate}}</p>
+            </div>
         </div>
-        <img src="../../../assets/img/mark.jpg" class="img1" alt="">
-    </div>
-    <div class="col col-md-3 ml-2 color p-7">
-        <img src="../../../assets/img/marcoInter.png" class="img2" alt="">
-        <p class=" pb-6 pt-6 h6">{{"SERVICES.PARAGRAPH" | translate}}</p>
-    </div>
-    </div>
-    <!-- De aquí para abajo aparece la nueva parte, que se activa con el evento-->
-    <div *ngIf="estado" class="row justify-content-center">
-    <div class="col-auto posicion">
-        <div class="figura">
-            <p class="pt-6 ml-1 fuente">{{"SERVICES.TITLE" | translate}}</p>
+
+<!-- De aquí para abajo aparece la nueva parte, que se activa con el evento-->
+
+        <div *ngIf="estado" class="row justify-content-center">
+            <div class="col-auto">
+                <div class="figura">
+                    <p class="pt-6 ml-1 small">{{"SERVICES.TITLE" | translate}}</p>
+                </div>
+                <img src="../../../assets/img/mark.jpg" class="img1_v2" alt="">
+            </div>
+            <div class="offset-1 col-10 servicios-box">
+                <img src="../../../assets/img/marcoInter.png" class="img2" alt="">
+                <p class=" pb-6 pt-6 small">{{"SERVICES.PARAGRAPH" | translate}}</p>
+            </div>
         </div>
-        <img style="width: 25m; height: 12em" src="../../../assets/img/mark.jpg" class="img1" alt="">
     </div>
-    <div class="offset-1 col-10 color p-7">
-        <img src="../../../assets/img/marcoInter.png" class="img2" alt="">
-        <p class=" pb-6 pt-6 h6">{{"SERVICES.PARAGRAPH" | translate}}</p>
-    </div>
-    </div>
-</div>
-</div>
 
