--- a/src/app/Components/home/home.component.html
+++ b/src/app/Components/home/home.component.html
@@ -1,7 +1,7 @@
 <div class="home-container">
   <div class="d-flex justify-content-center">
     <div class="logo">
-      <img class="home-sombra" src="../../../assets/img/sombra2.webp" />
+      <img class="home-sombra" src="../../../assets/img/mancha de tinta.svg" />
       <img class="home-logo" src="../../../assets/img/Home/keta1.svg" />
     </div>
   </div>
