--- a/src/app/Components/inicio/inicio.component.html
+++ b/src/app/Components/inicio/inicio.component.html
@@ -1,6 +1,6 @@
 <app-nav></app-nav>
 <!-- Inicio container fluído -->
-    <div class="container-fluid inicio-container">
+    <div class="container-fluid iniciocontainer">
         <!-- Inicio fila 1 -->
         <div class="row fila-1">
             <!-- Inicio columna 1 de la fila 1 -->
@@ -26,9 +26,9 @@
             </div>
         </div>
         <!-- Inicio fila 2 -->
-        <div class="row fila-2">
+        <div class="row">
             <!-- Inicio columna 1 de fila 2 -->
-            <div class="col-sm-12 col-md-6 bg-primary">
+            <div class="col-sm-12 col-md-6 bg-primary" id="columna-2">
                 <div class="img-container-digitales">
                     <img class="img-inicio" src="../../assets/img/principal/2.png" alt="">
                     <span class="centered">{{"BEGINNING.TITLE-1" | translate}}</span>
@@ -39,7 +39,7 @@
                 <!-- FIn satélites de digitales -->
             </div>
             <!-- Inicio columa 2 de fila 2 -->
-            <div class="col-sm-12 col-md-6 bg-secondary">
+            <div class="col-sm-12 col-md-6 bg-secondary" id="columna-II">
                 <div class="img-container-metaverso">
                     <img class="img-inicio" src="../../assets/img/principal/1.png" alt="">
                     <span class="centered">{{"BEGINNING.TITLE-5" | translate}}</span>
