--- a/src/app/Components/navbar/navbar.component.css
+++ b/src/app/Components/navbar/navbar.component.css
@@ -1,3 +1,5 @@
+/* 
+
 .hola{
     visibility: hidden;
   }
@@ -8,7 +10,8 @@
   /* .button-nav{
     background-color: yellowgreen;
     border: none;
-  } */
+  } * /
+
   @media only screen and (max-width: 700px) {
     .hola {
       visibility: initial;
@@ -19,3 +22,5 @@
 .color{
     background-color: #00172A;
 }
+
+ */
