--- a/src/app/Components/nav/nav.component.html
+++ b/src/app/Components/nav/nav.component.html
@@ -1,7 +1,8 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-ketanolab">
   <div class="container">
       <a class="navbar-brand d-lg-none" href="#">
-          <img src="../../assets/img/img/circulo-01.svg" alt="Ketanolab">
+          <!-- Creé la clase "brand-mobile" para la imagen "circulo-01.svg" para empequeñecerle en la vista móvil-->
+        <img class="brand-mobile" src="../../assets/img/img/circulo-01.svg" alt="Ketanolab">
       </a>  
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -11,10 +12,10 @@
           <a class="navbar-brand d-none d-lg-block" href="#">
               <img src="../../assets/img/img/circulo-01.svg" alt="Ketanolab">
           </a>        
-          <a class="nav-link" href="/nosotros"><span class="nav-link-1">{{"NAV.TITLE-1" | translate}}</span></a>
-          <a class="nav-link" href="/experiencia"><span class="nav-link-2">{{"NAV.TITLE-2" | translate}}</span></a>
-          <a class="nav-link" href="/aliados"><span class="nav-link-3">{{"NAV.TITLE-3" | translate}}</span></a>
-          <a class="nav-link" href="#"><span class="nav-link-4">{{"NAV.TITLE-4" | translate}}</span></a>
+          <a class="nav-link_1" href="/nosotros"><span class="nav-link-1"><p class="text-nav-1">{{"NAV.TITLE-1" | translate}}</p></span></a>
+          <a class="nav-link_2" href="/experiencia"><span class="nav-link-2"><p class="text-nav-2">{{"NAV.TITLE-2" | translate}}</p></span></a>
+          <a class="nav-link_3" href="/aliados"><span class="nav-link-3"><p class="text-nav-3">{{"NAV.TITLE-3" | translate}}</p></span></a>
+          <a class="nav-link_4" href="#"><span class="nav-link-4"><p class="text-nav-4">{{"NAV.TITLE-4" | translate}}</p></span></a>
       </div>
     </div>
   </div>
