Álex Quijote. Octavo Commit.
Documentos cambiados:

1)inicio.component.html 2)inicio.component.css 3)es.json

Cambios realizados:
1) Cambios aplicados de Milenka. Eliminación y reestructuración de satélites.

2)Creación de un nuevo satélite: "sistemas web", por tanto, modifiqué el
archivo es.json, para agregar dicha etiqueta.

3) Agregar efecto :hover transform:scale() en las imágenes centrales.

4) Mejoramiento de los contenedores de las imágenes centrales.

5) Cambio de color de columnas para maquetar, le puse un color más
cercano al original, para observar cómo va a quedar.

Nota: El avance en el responsive se perdió, al realizar todos estos cambios,
los media querys, tendré que volver a iniciarlos con los nuevos ajustes.

Fin del Octavo Commit.

--- a/src/app/Components/nav/nav.component.css
+++ b/src/app/Components/nav/nav.component.css
@@ -674,7 +674,10 @@ se le puede visibilziar completa, ordenada, y responsiva */
 los cambios al "navbar-nav" de aquí para abajo, afectan al menú "sánduche" */
 
 @media (max-width: 991px) {
-
+    #align-hamburguesa {
+        position: relative;
+        left: -10%;
+    }
     .brand-mobile {
         width: 75%;
 
@@ -692,7 +695,7 @@ los cambios al "navbar-nav" de aquí para abajo, afectan al menú "sánduche" */
     /* Aquí cambio el espacio entre los botones del nav, y su ubicación */
 
     .nav-link_1 {
-        border: 1px dashed red;
+        border: 1px dashed skyblue;
         position: relative;
         top:0rem;
         left: 34%;
@@ -701,7 +704,7 @@ los cambios al "navbar-nav" de aquí para abajo, afectan al menú "sánduche" */
     }
 
     .nav-link_2 {
-        border: 1px dashed red;
+        border: 1px dashed skyblue;
         position: relative;
         top:0rem;
         left: 34%;
@@ -710,7 +713,7 @@ los cambios al "navbar-nav" de aquí para abajo, afectan al menú "sánduche" */
     }
 
     .nav-link_3 {
-        border: 1px dashed red;
+        border: 1px dashed skyblue;
         position: relative;
         top:0em;
         left: 34%;
@@ -718,7 +721,7 @@ los cambios al "navbar-nav" de aquí para abajo, afectan al menú "sánduche" */
         height: 6rem;
     }   
     .nav-link_4 {
-        border: 1px dashed red;
+        border: 1px dashed skyblue;
         position: relative;
         top:0rem;
         left: 34%;
@@ -835,7 +838,6 @@ los cambios al "navbar-nav" de aquí para abajo, afectan al menú "sánduche" */
         margin-left: 2.7rem;      
     }
 }
-
 
 @media (max-width: 570px) {
 
