--- a/src/app/Components/inicio/inicio.component.html
+++ b/src/app/Components/inicio/inicio.component.html
@@ -1,54 +1,55 @@
 <app-nav></app-nav>
 <!-- Inicio container fluído -->
-    <div class="container-fluid iniciocontainer">
+    <div class="container-fluid">
         <!-- Inicio fila 1 -->
-        <div class="row fila-1">
+        <div class="row">
             <!-- Inicio columna 1 de la fila 1 -->
-            <div class="col-sm-12 col-md-6 bg-success">
+            <div class="col-sm-12 col-md-6 color1" id="columna-1">
                 <div class="img-container-estrategias">
                     <img class="img-inicio" src="../../assets/img/principal/3.png" alt="">
                     <a class="centered">{{"BEGINNING.TITLE-7" | translate}}</a>
                 </div>
                 <!-- Inicio satélites de estrategias -->
-                <a href="/produccion"class="servicios-box-estrategia-1">{{"BEGINNING.TITLE-8" | translate}}</a>
-                <a href="/marketing"class="servicios-box-estrategia-2">{{"BEGINNING.TITLE-9" | translate}}</a> 
+                <a href="/marketing"class="servicios-box-estrategia-1">{{"BEGINNING.TITLE-9" | translate}}</a>
+                <a href="/coaching"class="servicios-box-estrategia-2">{{"BEGINNING.COACHING-2" | translate}}</a>
+                <a href="/services" class="servicios-box-estrategia-3">{{"BEGINNING.TITLE-3" | translate}}</a> 
                 <!-- Final satélites de estrategias -->
             </div>
             <!-- Inicio columna 2 de la fila 1 -->
-            <div class="col-sm-12 col-md-6 bg-warning p-5">
+            <div class="col-sm-12 col-md-6 color2 p-5" id="columna-I">
                 <div class="img-container-blockchain">
                     <img class="img-inicio" src="../../assets/img/principal/4.png" alt="">
-                    <span class="centered">{{"BEGINNING.TITLE-10" | translate}}</span>
+                    <a class="centered">{{"BEGINNING.TITLE-10" | translate}}</a>
                 </div>
                 <!-- Inicio satélite de blockchain -->
-                <a class="servicios-box-blockchain-1" href="/dapps">{{"BEGINNING.TITLE-11" | translate}}</a>    
+                <a class="servicios-box-blockchain-1" href="/dapps">{{"BEGINNING.TITLE-11" | translate}}</a>
+                <a class="servicios-box-blockchain-2" href="/arte">{{"BEGINNING.TITLE-6" | translate}}</a>    
                 <!-- Fin de satélite de blockchain -->
             </div>
         </div>
         <!-- Inicio fila 2 -->
         <div class="row">
             <!-- Inicio columna 1 de fila 2 -->
-            <div class="col-sm-12 col-md-6 bg-primary" id="columna-2">
+            <div class="col-sm-12 col-md-6 color3" id="columna-2">
                 <div class="img-container-digitales">
                     <img class="img-inicio" src="../../assets/img/principal/2.png" alt="">
-                    <span class="centered">{{"BEGINNING.TITLE-1" | translate}}</span>
+                    <a class="centered">{{"BEGINNING.TITLE-1" | translate}}</a>
                 </div>
                 <!-- Inicio satélites de digitales -->
-                <a href="/commerce" class="servicios-box-digitales-1">{{"BEGINNING.TITLE-2" | translate}}</a>              
+                <a href="#" class="servicios-box-digitales-1">{{"BEGINNING.TITLE-13" | translate}}</a>              
                 <a href="/apps"class="servicios-box-digitales-2">{{"BEGINNING.TITLE-4" | translate}}</a>
+                <a href="/commerce" class="servicios-box-digitales-3">{{"BEGINNING.TITLE-2" | translate}}</a>
                 <!-- FIn satélites de digitales -->
             </div>
             <!-- Inicio columa 2 de fila 2 -->
-            <div class="col-sm-12 col-md-6 bg-secondary" id="columna-II">
+            <div class="col-sm-12 col-md-6 color4" id="columna-II">
                 <div class="img-container-metaverso">
                     <img class="img-inicio" src="../../assets/img/principal/1.png" alt="">
-                    <span class="centered">{{"BEGINNING.TITLE-5" | translate}}</span>
+                    <a class="centered">{{"BEGINNING.TITLE-5" | translate}}</a>
                 </div>
                 <!-- Inicio satélites de metaverso -->
-                <a class="servicios-box-metaverso-1" href="/arte">{{"BEGINNING.TITLE-6" | translate}}</a>
+                <a href="/produccion"class="servicios-box-metaverso-1">{{"BEGINNING.TITLE-8" | translate}}</a>
                 <a class="servicios-box-metaverso-2" href="/turismo">{{"BEGINNING.COACHING-1" | translate}}</a>
-                <a href="/coaching"class="servicios-box-metaverso-3">{{"BEGINNING.COACHING-2" | translate}}</a>
-                <a href="/services" class="servicios-box-metaverso-4">{{"BEGINNING.TITLE-3" | translate}}</a>
                 <!-- Fin de satélites de metaverso -->
             </div>
         </div>
